    As of Emacs 27.0.50, the function ~window--display-buffer~ no longer accepts
    a ~dedicated~ argument, and instead relies on ~alist~ and
    ~display-buffer-mark-dedicated~ to decide dedication state of the window. As
    result, ~purpose-change-buffer~ ignores the ~dedicated~ argument when using
    Emacs version 27 or newer. Older Emacs versions are not affected.
* Release 1.7
** Breaking Changes
*** removed support for Emacs 24.3
    Supported versions are Emacs 24.4 and newer (up to 26.1 at the
    time of writing). The branch ~release-1.6~ will continue to
    support Emacs 24.3 and is available for those who need it.
** Bug Fixes
*** [[https://github.com/bmag/emacs-purpose/pull/116][#116]]: honor ~display-buffer-mark-dedicated~
* Release 1.6.1
** Breaking Changes
*** [[https://github.com/bmag/emacs-purpose/issues/84][#84]], [[https://github.com/bmag/emacs-purpose/pull/125][#125]]:  remove option ~purpose-preferred-prompt~ and prompts shims.
    Removed ~completing-read~ and ~read-file-name~ shims, thus the
    custom variable ~purpose-preferred-prompt~ has been removed. From the README:
    #+BEGIN_QUOTE
    In the past, the variable `purpose-preferred-prompt`, allowed you
    to choose whether you want Purpose to use IDO or Helm when it
    needs information from the user. This variable has been
    removed. Instead, the prompt relies on the normal mechanism. For
    Helm prompts enable `helm-mode`, for Ivy mode enable `ivy-mode`,
    for IDO prompts enable `ido-mode`, etc. If using `ido-mode`, note
    that because how IDO works it doesn't cover all commands, and some
    commands won't have an IDO prompt. To work around that, please see
    the package
    [ido-completion-read+](https://github.com/DarwinAwardWinner/ido-completing-read-plus)
    (formerly ido-ubiquitous).
    #+END_QUOTE
** Enhancements