@@ -9,6 +9,7 @@
     ~display-buffer-mark-dedicated~ to decide dedication state of the window. As
     result, ~purpose-change-buffer~ ignores the ~dedicated~ argument when using
     Emacs version 27 or newer. Older Emacs versions are not affected.
+*** [[https://github.com/bmag/emacs-purpose/pull/134][#134]]: add support for Zone
 * Release 1.7
 ** Breaking Changes
 *** removed support for Emacs 24.3
